[tool.poetry]
name = "transformer-chatgpt-visual"
description = "A minimal version of ChatGPT based on Transformer models, with complete processing flow visualization."
authors = ["Your Name <your.email@example.com>"]
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
