[project]
name = "transformer-chatgpt-visual"
description = "A minimal version of ChatGPT based on Transformer models, with complete processing flow visualization."
authors = [
        {name = "Zheng Wei", email = "zw.fengren@gmail.com"}
]
version = "0.1.0"
requires-python = ">=3.12"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
